# fileboard

./: Cargo.toml  config.dep.toml  config.toml  deploy.sh  log.txt
src/: config.rs  filemove.rs  filetree.rs  jstemplate.rs  main.rs  upload.rs
templates/: index.html  styles.css  upload.js
