[profile.dev]
debug = true

[package]
name = "fileboard"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
serde_derive = "1.0"
lazy_static = "1.4"
once_cell = "1.21.3"
