[profile.dev]
debug = true

[package]
name = "fileboard"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
serde_derive = "1.0"
lazy_static = "1.4"
once_cell = "1.21.3"
axum = { version = "0.8.3", features = ["default", "multipart","tokio"] }
urlencoding = "2.1.3"
chrono = "0.4"
uuid = { version = "1.16.0", features = ["v4"] }
askama = "0.12"
tower-http = {version = "0.6.2", features = ["limit", "trace"] }
futures = "0.3.31"
